2004-06-15  JP Rosevear  <jpr@novell.com>

	Fixes #57393
	
	* gui/e-week-view.c (e_week_view_set_compress_weekend): redraw the
	titles as well since the spacing is different

2004-06-15  Rodrigo Moya <rodrigo@novell.com>

	* gui/dialogs/meeting-page.c (meeting_page_construct): connect
	to "client_changed" signal on the page.
	(client_changed_cb): new callback.
	(sensitize_widgets): new function.
	(meeting_page_fill_widgets): call sensitize_widgets().

	* gui/e-meeting-time-sel.[ch]
	(e_meeting_time_selector_set_read_only): new function.
	(e_meeting_time_selector_construct): store some missing buttons
	in the EMeetingTimeSelector structure.

	* gui/dialogs/schedule-page.c (schedule_page_construct):
	connect to "client_changed" signal on the page.
	(client_changed_cb): new callback.
	(sensitize_widgets): new function.
	(schedule_page_fill_widgets): call sensitize_widgets().

2004-06-10  Rodrigo Moya <rodrigo@novell.com>

	* gui/e-cal-model.c (e_cal_view_objects_modified_cb): removed
	g_assert call, since we shouldn't crash when getting wrong
	notifications from a backend.

2004-06-10  JP Rosevear  <jpr@novell.com>

	* gui/gnome-cal.c
	(gnome_calendar_on_date_navigator_selection_changed): only do the
	range selected hack in one case

2004-06-10  JP Rosevear  <jpr@novell.com>

	* gui/gnome-cal.c (setup_widgets): set 6 weeks shown
	(display_view): ditto

2004-06-10  Rodrigo Moya <rodrigo@novell.com>

	Fixes #58748

	* gui/gnome-cal.c (setup_widgets): set the timezone on all views
	when creating them.

2004-06-10  Rodrigo Moya <rodrigo@novell.com>

	* gui/e-calendar-table.c (e_calendar_table_init): don't set
	the "bg_color_column" property on the ECellToggle class.

2004-06-10  Rodrigo Moya <rodrigo@novell.com>

	Fixes #58799

	* gui/e-calendar-view.c (e_calendar_view_delete_selected_occurrence):
	Use the timezone for getting the RECUR-ID from the instance start
	date if available. Also, use dates only as the recurrence ID, and
	do nothing if not a recurrent appointment.